# multi-recommender-server

./: .gitignore  Dockerfile  Dockerfile.init  Dockerfile.server  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
hybrid_rs/: base.css  config.ini  config.py  data.py  dataset.py  error_views.py  model.py  outputs.py  server.py  views.py
hybrid_rs/server/: config.py  config.toml  django_setup.py  exceptions.py  gunicorn_config.py  server.py  url_setup.py
hybrid_rs/server/orm/: anime_orm.py
hybrid_rs/server/static/scripts/: main.js
hybrid_rs/server/static/styles/: description.css  main.css
hybrid_rs/server/templates/: anime.html  description.html
hybrid_rs/server/templatetags/: pagination_tags.py
hybrid_rs/server/views/: anime_views.py
hybrid_rs/utils/: downloader.py  utils.py
notes/: .gitignore  Anime.csv.dvc  Anime.ipynb  anime_with_recommendations.csv.dvc
scripts/: docker_entry_script.sh  init_db.sh  init_nginx.sh  load_anime_csv_mongo.py
scripts/init_db/: load_anime_csv_mongo.py
scripts/init_nginx/: my-domain.conf
