[tool.poetry]
name = "hybrid_rs"
version = "0.1.0"
description = ""
authors = ["CapBlood <stalker.anonim@mail.ru>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pandas = "^1.3.4"
numpy = "^1.21.4"
scipy = "^1.7.3"
pywebio = "^1.4.0"
loguru = "^0.5.3"
tornado = "^6.1"
gdown = "^4.2.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
