[tool.poetry]
name = "hybrid_rs"
version = "0.1.0"
description = ""
authors = ["CapBlood <stalker.anonim@mail.ru>"]

[tool.poetry.dependencies]
python = ">=3.8,<=3.9"
numpy = "^1.21.4"
scipy = "^1.7.3"
loguru = "^0.5.3"
mongoengine = "^0.24.2"
toml = "^0.10.2"
Django = "^4.1.4"
uvicorn = "^0.20.0"
pandas = "^1.5.2"
dvc = "^2.38.1"
dvc-gdrive = "^2.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-server = "hybrid_rs.server.server:run"
django-manager = "hybrid_rs.server.server:manager"