[tool.poetry]
name = "hybrid_rs"
version = "0.1.0"
description = ""
authors = ["CapBlood <stalker.anonim@mail.ru>"]

[tool.poetry.dependencies]
python = ">=3.8,<=3.9"
numpy = "^1.21.4"
scipy = "^1.7.3"
loguru = "^0.5.3"
mongoengine = "^0.24.2"
toml = "^0.10.2"
Django = "^4.1.4"
uvicorn = "^0.20.0"
pandas = "^1.5.2"
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "hybrid_rs.server.server:run_server"
debug = "hybrid_rs.server.server:run_debug"
django-manager = "hybrid_rs.server.server:manager"